--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -44,7 +44,7 @@
       }
   </style>
   <style>
-    table.pub_table,td.pub_td1,td.pub_td2
+    table.pub_table,td.pub_td1_p,td.pub_td1_d,td.pub_td2
   {
   padding: 8px;
   /* width: 860px; */
@@ -52,14 +52,23 @@
       border-spacing: 15px;
       margin-top: -5px;
   }
-  td.pub_td1
+  td.pub_td1_p
   {
   width:50px;
   }
-  td.pub_td1 img
+  td.pub_td1_d
+  {
+  width:50px;
+  }
+  td.pub_td1_p img
   {
     /*height:120px;*/
-    width: 150px;
+    width: 200px;
+  }
+  td.pub_td1_d img
+  {
+    /*height:120px;*/
+    width: 250px;
   }
   </style>
   
@@ -199,7 +208,7 @@
   <H2>PUBLICATIONS</H2>
   <table class="pub_table">
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/1.png" class="papericon" width="150"></td>
+      <td class="pub_td1_p"><img src="./PaperFig/1.png" class="papericon" width="150"></td>
       <td class="pub_td2">
         <!--
         <b>[1]Single-Target Real-Time Passive WiFi Tracking</b>
@@ -219,7 +228,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/2.png" class="papericon" width="200"></td>
+      <td class="pub_td1_p"><img src="./PaperFig/2.png" class="papericon" width="200"></td>
       <td class="pub_td2">
         <!--
         <b>[2]Development of an Uplink Sensing Demonstrator for Perceptive Mobile Networks</b>
@@ -236,7 +245,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/3.png" class="papericon" width="250"></td>
+      <td class="pub_td1_p"><img src="./PaperFig/3.png" class="papericon" width="250"></td>
       <td class="pub_td2">
         <!--
         <b>[3]Vital Sign Monitoring in Dynamic Environment via mmWave Radar and Camera Fusion</b>
@@ -255,7 +264,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/4.png" class="papericon" width="300"></td>
+      <td class="pub_td1_p"><img src="./PaperFig/4.png" class="papericon" width="300"></td>
       <td class="pub_td2">
         <!--
         <b>[4]Accurate AoA Estimation for RFID Tag Array with Mutual Coupling</b>
@@ -274,7 +283,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/5.png" class="papericon" width="300"></td>
+      <td class="pub_td1_p"><img src="./PaperFig/5.png" class="papericon" width="300"></td>
       <td class="pub_td2">
         <!--
         <b>[5]Computer Vision-assisted 3D Object Localization via COTS RFID Devices and a Monocular Camera</b>
@@ -292,7 +301,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/6.png" class="papericon" width="300"></td>
+      <td class="pub_td1_p"><img src="./PaperFig/6.png" class="papericon" width="300"></td>
       <td class="pub_td2">
         <!--
         <b>[6]Recognizing 3D Orientation of a Two-RFID-Tag Labeled Object in Multipath Environments Using Deep Transfer Learning</b>
@@ -311,7 +320,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/7.png" class="papericon" width="300"></td>
+      <td class="pub_td1_p"><img src="./PaperFig/7.png" class="papericon" width="300"></td>
       <td class="pub_td2">
         <!--
         <b>[7]RF-Mirror: Mitigating Mutual Coupling Interference in Two-Tag Array Labeled RFID Systems</b>
@@ -330,7 +339,7 @@
 
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/8.png" class="papericon" width="300"></td>
+      <td class="pub_td1_p"><img src="./PaperFig/8.png" class="papericon" width="300"></td>
       <td class="pub_td2">
         <!--
         <b>[8] RF-Focus: Computer Vision-assisted Region-of-interest RFID Tag Recognition and Localization in Multipath-prevalent Environments</b>
@@ -349,7 +358,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/9.png" class="papericon" width="300"></td>
+      <td class="pub_td1_p"><img src="./PaperFig/9.png" class="papericon" width="300"></td>
       <td class="pub_td2">
         <!--
         <b>[9]RF-MVO: Simultaneous 3D Object Localization and Camera Trajectory Recovery Using RFID Devices and a 2D Monocular Camera</b>
@@ -368,7 +377,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/10.png" class="papericon" width="300"></td>
+      <td class="pub_td1_p"><img src="./PaperFig/10.png" class="papericon" width="300"></td>
       <td class="pub_td2">
         <!--
         <b>[10]A See-Through-wall System for Device-free Human Motion Sensing Based on Battery-free RFID</b>
@@ -388,7 +397,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/11.png" class="papericon" width="300"></td>
+      <td class="pub_td1_p"><img src="./PaperFig/11.png" class="papericon" width="300"></td>
       <td class="pub_td2">
         <!--
         <b>[11]One More Tag Enables Fine-Grained RFID Localization and Tracking</b>
@@ -408,7 +417,7 @@
     </tr>
     
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/12.png" class="papericon" width="300"></td>
+      <td class="pub_td1_p"><img src="./PaperFig/12.png" class="papericon" width="300"></td>
       <td class="pub_td2">
         <!--
         <b>[12]TrackT: Accurate Tracking of RFID Tags with mm-level Accuracy Using First-order Taylor Series Approximation</b>
@@ -429,7 +438,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/13.png" class="papericon" width="300"></td>
+      <td class="pub_td1_p"><img src="./PaperFig/13.png" class="papericon" width="300"></td>
       <td class="pub_td2">
         <!--
         <b>[13]TMicroscope: Behavior Perception Based on the Slightest RFID Tag Motion</b>
@@ -504,7 +513,7 @@
   <H2>DEMO</H2>
   <table class="pub_table">
     <tr>
-      <td class="pub_td1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
+      <td class="pub_td1_d"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
       <td class="pub_td2">
         <b>mmWave Radar Sensing</b>
         <br>
@@ -518,7 +527,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./files/demo_2.gif" class="papericon" width="300"></td>
+      <td class="pub_td1_d"><img src="./files/demo_2.gif" class="papericon" width="300"></td>
       <td class="pub_td2">
         <b>Head Pose Estimation via mmWave Radar</b>
         <br>
@@ -535,7 +544,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./files/demo_3.gif" class="papericon" width="300"></td>
+      <td class="pub_td1_d"><img src="./files/demo_3.gif" class="papericon" width="300"></td>
       <td class="pub_td2">
         <b>Single-Target Real-Time Passive WiFi Tracking</b>
         <br>
@@ -550,7 +559,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./files/demo_4.gif" class="papericon" width="300"></td>
+      <td class="pub_td1_d"><img src="./files/demo_4.gif" class="papericon" width="300"></td>
       <td class="pub_td2">
         <b>High sensitivity RFID security sensing system</b>
         <br>
@@ -563,7 +572,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./files/demo_5.gif" class="papericon" width="300"></td>
+      <td class="pub_td1_d"><img src="./files/demo_5.gif" class="papericon" width="300"></td>
       <td class="pub_td2">
         <b>Active target location based on passive RFID</b>
         <br>
@@ -576,7 +585,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./files/demo_6.gif" class="papericon" width="300"></td>
+      <td class="pub_td1_d"><img src="./files/demo_6.gif" class="papericon" width="300"></td>
       <td class="pub_td2">
         <b>Human motion detection and direction recognition</b>
         <br>
