--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
         <H1>Dr. Zhonqin Wang &nbsp;</H1></DIV>
         <BR>
         <BR> Email:  
-        <A class="line-height-20" href="mailto:zhongqin.wang@uts.edu.au"> zhongqin.wang@uts.edu.au</A>; 
+        <A class="line-height-20" href="mailto:zhongqin.wang@uts.edu.au"> zhongqin.wang@uts.edu.au</A> 
         <BR> Phone: 
-        <A class="line-height-20" href="+61 0416167758"> +61 0416167758</A>;
+        <A class="line-height-20" href="+61 0416167758"> +61 0416167758</A>
         <BR> Github: 
-        <A class="line-height-20" href="https://github.com/Zhongqin-Wang">https://github.com/Zhongqin-Wang</A>;
+        <A class="line-height-20" href="https://zhongqin-wang.github.io/">https://zhongqin-wang.github.io/</A>
         <BR> Google scholar:
-        <A class="line-height-20" href="https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en">https://scholar.google.com</A>
+        <A class="line-height-20" href="https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en">https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en</A>
         <BR></P>
       </TD>
       <TD>
@@ -117,7 +117,7 @@
   <H2>WORK EXPERIENCE</H2>
   <div class="container">
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
-    <div class="right">Feb. 2024 - Present</div>
+    <div class="right">2024 - Present</div>
   </div>
   <p class="line-height-20"><i>Research Fellow supervised by Prof. Andrew Zhang</i></p>
   <ul>
@@ -127,7 +127,7 @@
 
   <div class="container">
     <div class="left"><b>Capital Normal University, Beijing, China</b></div>
-    <div class="right">Dec. 2021 - Jan. 2024</div>
+    <div class="right">2022 - 2023</div>
   </div>
   <p class="line-height-20"><i>Lecturer at College of Information and Engineering</i></p>
   <ul>
@@ -138,7 +138,7 @@
 
   <div class="container">
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
-    <div class="right">Sep. 2021 - Jun. 2022</div>
+    <div class="right">2021 - 2022</div>
   </div>
   <p class="line-height-20"><i>Research Associate supervised by Prof. Min Xu</i></p>
   <ul>
@@ -154,9 +154,9 @@
 
   <div class="container">
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
-    <div class="right">Jan. 2021 – Jun. 2021</div>
+    <div class="right">2020 – 2021</div>
   </div>
-  <p class="line-height-20"><i>Research Engineer supervised by Prof. Andrew Zhang</i></p>
+  <p class="line-height-20"><i>Research Engineer and Research Assistant supervised by Prof. Andrew Zhang</i></p>
   <ul>
     <li>Designed a novel device-free WiFi tracking scheme</li>
     <li>Implemented a real-time tracking demonstration system
@@ -164,19 +164,6 @@
       <A href="https://youtu.be/oIPGrRmY-uc">https://youtu.be/oIPGrRmY-uc</A>)</li>
     <li>Published the research outcome in an A* top journal</li>
   </ul>
-
-  <div class="container">
-    <div class="left"><b>University of Technology Sydney, Australia</b></div>
-    <div class="right">Jul. 2020 – Dec. 2020</div>
-  </div>
-  <p class="line-height-20"><i>Research Assistant supervised by Prof. Andrew Zhang</i></p>
-  <ul>
-    <li>Established a WiFi hardware platform for data collection </li>
-    <li>Reproduced and evaluated previous research works on 
-      passive human tracking using WiFi signals</li>
-  </ul>
-
-
 
   <H2>EDUCATION</H2>
   <div class="container">
@@ -190,7 +177,7 @@
 
   <div class="container">
     <div class="left"><b>Nanjing University of Posts and Telecommunications, China</b></div>
-    <div class="right">Sep. 2015 – Jun. 2020</div>
+    <div class="right">2015 – 2020</div>
   </div>
   <p class="line-height-20">School of Internet of Things</p>
   <p class="line-height-2"><i>Ph.D. in Information Network supervised by Prof. Guoliang Chen</i></p>
@@ -199,7 +186,7 @@
 
   <div class="container">
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
-    <div class="right">Sep. 2011 – Mar. 2014</div>
+    <div class="right">2011 – 2014</div>
   </div>
   <p class="line-height-20">Nanjing University of Posts and Telecommunications, China</p>
   <p class="line-height-2"><i>School of Computer Science and Technology</i></p>
