--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -172,8 +172,7 @@
   </div>
   <p class="line-height-20">School of Electrical and Data Engineering</p>
   <p class="line-height-2"><i>Ph.D. in Engineering supervised by Prof. Min Xu</i></p>
-  <p class="line-height-20">Thesis: Computer Vision-assisted Battery-free RFID 
-    Systems for Object Recognition, Localization and Orientation</p>
+  <p class="line-height-20">Thesis: Computer Vision-assisted Battery-free RFID Systems for Object Recognition, Localization and Orientation</p>
 
   <div class="container">
     <div class="left"><b>Nanjing University of Posts and Telecommunications, China</b></div>
@@ -181,8 +180,7 @@
   </div>
   <p class="line-height-20">School of Internet of Things</p>
   <p class="line-height-2"><i>Ph.D. in Information Network supervised by Prof. Guoliang Chen</i></p>
-  <p class="line-height-20">Thesis: Research on Object Position Sensing and Multi-Tag Mutual 
-    Coupling Suppression in Battery-free RFID</p>
+  <p class="line-height-20">Thesis: Research on Object Position Sensing and Multi-Tag Mutual Coupling Suppression in Battery-free RFID</p>
 
   <div class="container">
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
