--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -90,7 +90,7 @@
         <A class="line-height-20" href="+61 0416167758"> +61 0416167758</A>
         <BR> Github: 
         <A class="line-height-20" href="https://zhongqin-wang.github.io/">https://zhongqin-wang.github.io/</A>
-        <BR> Google scholar:
+        <BR> Google Scholar:
         <A class="line-height-20" href="https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en">https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en</A>
         <BR></P>
       </TD>
