--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <H2>EDUCATION</H2>
   <div class="container">
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
-    <div class="right">Jan. 2017 – Dec. 2020</div>
+    <div class="right"> 2017 – 2020</div>
   </div>
   <p class="line-height-20">School of Electrical and Data Engineering</p>
   <p class="line-height-2"><i>Ph.D. in Engineering supervised by Prof. Min Xu</i></p>
