--- a/index.html
+++ b/index.html
@@ -86,16 +86,14 @@
         <BR>
         <BR> Email:  
         <A class="line-height-20" href="mailto:zhongqin.wang@uts.edu.au"> zhongqin.wang@uts.edu.au</A> 
-        <BR> Phone: 
-        <A class="line-height-20" href="+61 0416167758"> +61 0416167758</A>
         <BR> Github: 
         <A class="line-height-20" href="https://zhongqin-wang.github.io/">https://zhongqin-wang.github.io/</A>
-        <BR> Google scholar:
+        <BR> Google Scholar:
         <A class="line-height-20" href="https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en">https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en</A>
         <BR></P>
       </TD>
       <TD>
-        <IMG width="160" src="files/person_photo.jpg" border="0">
+        <IMG width="120" src="files/person_photo.jpg" border="0">
       </TD>
     </TR>
     <TR></TR></TBODY>
