--- a/index.html
+++ b/index.html
@@ -67,23 +67,22 @@
 <div id="layout-content" style="margin-top: 25px;">
     <table>
         <tbody>
-        <tr>
-            <td width="670">
-                <div id="toptitle">
-                    <h1>Dr. Zhonqin Wang &nbsp;</h1>
-                </div>
-                <br>
-                <br> Email:
-                <a class="line-height-20" href="mailto:zhongqin.wang@uts.edu.au">zhongqin.wang@uts.edu.au</a>
-                <br> Github:
-                <a class="line-height-20" href="https://zhongqin-wang.github.io/">https://zhongqin-wang.github.io/</a>
-                <br> Google Scholar:
-                <a class="line-height-20" href="https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en">https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en</a>
-            </td>
-            <td>
-                <img width="120" src="files/person_photo.jpg" border="0">
-            </td>
-        </tr>
+        <TR>
+            <TD width="670">
+                <DIV id="toptitle">
+                    <H1>Dr. Zhongqin Wang &nbsp;</H1></DIV>
+                <BR>
+                <BR> Email:
+                <A class="line-height-20" href="mailto:zhongqin.wang@uts.edu.au">zhongqin.wang@uts.edu.au</A>
+                <BR> Github:
+                <A class="line-height-20" href="https://zhongqin-wang.github.io/">zhongqin-wang.github.io</A>
+                <BR> Google Scholar:
+                <A class="line-height-20" href="https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en">scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en</A>
+            </TD>
+            <TD>
+                <IMG style="height: 100px; width: auto;" src="files/person_photo.jpg" border="0">
+            </TD>
+        </TR>
         </tbody>
     </table>
     <div id="layout-content" style="margin-top: 25px;">
