--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@
         <p class="line-height-2"><i>School of Computer Science and Technology</i></p>
         <p class="line-height-20">M.S. in Computer Software and Theory supervised by Prof. Ning Ye</p>
 
-        <div class="container">
+<!--         <div class="container">
             <div class="left"><b>Jinling Institute of Technology, Nanjing, China</b></div>
             <div class="right">Sep. 2006 – Jun. 2010</div>
         </div>
         <p class="line-height-20">School of Electrical Engineering and Automation</p>
-        <p class="line-height-2"><i>B.S. in Electrical Engineering and Automation</i></p>
+        <p class="line-height-2"><i>B.S. in Electrical Engineering and Automation</i></p> -->
 
         <H2>PUBLICATIONS</H2>
         <table class="pub_table">
