--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <td class="pub_td1_p"><img src="./PaperFig/pc_iotj.png" class="papericon" width="200"></td>
                 <td class="pub_td2" data-index="">
                     <p>[<span class="pub_index"></span>] <b>Zhongqin Wang</b>, J. Andrew Zhang, Haimin Zhang, Min Xu, and Jay Guo. Passive Human Tracking with WiFi Point Clouds.
-                        <i>IEEE Internet of Things Journal</i>, 2024, To Appear. </p>
+                        <i>IEEE Internet of Things Journal</i>, 2024, doi:10.1109/JIOT.2024.3487193. </p>
                 </td>
             </tr> 
             
