--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -188,6 +188,15 @@
 
         <H2>PUBLICATIONS</H2>
         <table class="pub_table" id="pub_table">
+             <tr>
+                <td class="pub_td1_p"><img src="./PaperFig/pc_iotj.png" class="papericon" width="200"></td>
+                <td class="pub_td2" data-index="">
+                    <p>[<span class="pub_index"></span>] <b>Zhongqin Wang</b>, J. Andrew Zhang, Haimin Zhang, Min Xu, and Jay Guo. Passive Human Tracking with WiFi Point Clouds.
+                        <i>IEEE Internet of Things Journal</i>, 2024, doi:10.1109/JIOT.2024.3487193. [<a
+                                href="https://ieeexplore.ieee.org/document/10737138">Paper</a>] </p>
+                </td>
+            </tr> 
+            
             <tr>
                 <td class="pub_td1_p"><img src="./PaperFig/headpose.png" class="papericon" width="200"></td>
                 <td class="pub_td2" data-index="">
